# cargo-launcher

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
src/: albert.rs  alfred.rs  args.rs  cargo.rs  core.rs  file.rs  fs.rs  hain.rs  io.rs  launcher.rs  main.rs  tpl.rs
src/asset/albert/: __init__.py
src/asset/alfred/: info.plist
src/asset/hain/: index.js  package.json
