[package]
name        = "cargo-launcher"
edition     = "2018"
version     = "1.0.1"
authors     = ["Wataru Matsui <watawuwu@3bi.tech>"]
license     = "MIT"
description = "This CLI is a simple utility to register in lancher(alfred|hain|albert)."
repository  = "https://github.com/watawuwu/cargo-launcher"
readme      = "README.md"

[dependencies]
failure           = "0.1"
structopt         = "0.2"
log               = "0.4"
pretty_env_logger = "0.3"
serde             = "1.0"
serde_json        = "1.0"
serde_derive      = "1.0"
zip               = "0.5"
tera              = "0.11"
tempdir           = "0.3"
dirs              = "1.0"
